assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');



body {
    font-family: 'Roboto', sans-serif;
}

header {
    margin: 0;
}

.logo {
    height: 50px;
    width: auto;
    margin: 0 32px;
}

/* ----------------------------------------- Media Queries */
@media (max-width: 768px) {
    .padding-space {
        margin-top: 80px;
    }
}




/* ----------------------------------------- Navbar */
.navbar {
    background-color: white;
}

.navbar .navbar-toggler {
    border: none;
}

.navbar .navbar-nav a {
    font-weight: bold;
}

a {
    color: white;
    font-size: large;
}

a:hover {
    color: white;
}



.nav-item,
li {
    margin-bottom: 0;
}


/* ----------------------------------------- Colors */



/* ----------------------------------------- special paddings/margins/text */

h1,h2,h3,h4 {
    margin: 0;
    font-family: 'Playfair Display', serif;
}

h1 {
    font-size: 34px;    
}

h2 {
    font-size: 30px;
    margin-bottom: 30px;
}

h3 {
    font-size: 24px;
    margin-bottom: 10px;
}

h4 {
    font-size: 20px;
}

h5 {
    font-size: 18px;
}

h6 {
    font-size: 16px;
}

li {
    margin-bottom: 10px;
}

p {
    line-height: 1.6;
    margin-bottom: 20px;
}


.uppercase {
    text-transform: uppercase;
}

.tagline {
    font-weight: 400;
    font-size: 1.15rem;
    margin: 10px 0;
}

.text-align-center {
    text-align: center;
}

.align-items-center {
    align-items: center;
}

.margin-auto {
    margin-left: auto;
    margin-right: auto;
}

.page-title {
    margin: 25px 0;
}

td {
    padding: 10px;
}

/* ----------------------------------------- Home Hero */

.hero-container {
    background: url("../images/hero.webp") no-repeat top center;
    height: 90vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.hero-title {
    color: white;
    font-weight: bold;
    margin-bottom: 30px;
    max-width: 900px;
    background: rgb(0 0 0 / 68%);
    padding: 70px;
    border-radius: 3%;
    text-align: center;
}

/* ----------------------------------------- Page Hero */
.page-hero-container {
    height: 50vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.page-hero-container.monthly-cake {
    background: url("../images/chef-baking.webp") no-repeat bottom center;
}

.page-hero-container.baking-tips-hero {
    background: url("../images/baking-tips-hero-image.webp") no-repeat bottom center;
}

/* ----------------------------------------- About */

.about {
max-width: 1200px;
margin: 77px auto;
}

/* ----------------------------------------- Cake of the Month */
.container-margin {
    margin: 77px auto;
}
.cake-month-image {
    width: 100%;
    height: 100%;
}

.reverse {
    display: flex;
    flex-direction: row-reverse;
}

/* ----------------------------------------- Baking Tips section */

.baking-tips-container {
    margin: 77px auto;
}
    
.baking-tips-image {
    width: 100%;
    height: 100%;
}

/* ----------------------------------------- Callout */
.cta-container {
    margin: 77px auto;
}

.cta-container {
    background: url("../images/CTA.webp") no-repeat center center;
    height: 400px;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    display: flex;
    align-items: center;
    justify-content: left;
    position: relative;
}

.cta-title {
    color: white;
    font-weight: bold;
    margin-bottom: 30px;
    max-width: 450px;
    background: rgb(0 0 0 / 68%);
    padding: 20px;
    border-radius: 3%;
}

    /* ----------------------------------------- Cake of the Month Page */
/* ----------------------------------------- Cake of the month bio */
.cake-stats {
    background-color: #efebeb;
}

.cake-month-container {
    margin-top: 35px;
    margin-bottom: 0px;
}

.chocolate-cake-image {
    width: 100%;
    height: 100%;
}

/* ----------------------------------------- Ingredients and Recipe */
.recipe {
    padding-left: 95px;
    padding-top: 25px;
}

.recipe-container {
    padding-top: 75px;
}

@media only screen and (max-width: 736px) {
    .recipe {
        padding-left: 25px;
    }
}

.ingredients {
    background-color: #efebeb;
    padding: 25px;
}

/* ----------------------------------------- Notes */


    /* ----------------------------------------- Baking Tips */
/* ----------------------------------------- Accordion */
.tips-accordion {
    margin-top: 50px;
}

.card-header {
    background-color: rgb(54 55 56);
}

.card {
    background-color: #f2f2f2;
}

.btn-link {
    color: white;
}

.btn-link:hover {
    color: white;
}



/* ----------------------------------------- Buttons */
.cta-btn {
    font-weight: bold;
    border-radius: 25px;
    width: 200px;
    background-color: #595858;
    color: white;
    border: #595858;
}

.cta-btn:hover {
    background-color: #4e7fff;
    color: white;
}

.cta-btn:hover 
.cta-btn:active,
.cta-btn:focus,
.cta-btn:active:focus {
    background-color: #595858;
    color: white;
    box-shadow: none;
}

.feature-btn {
    font-weight: bold;
    border-radius: 25px;
    width: 200px;
    background-color: #2f2d2d;
    color: white;
    margin-top: 25px;
}

.feature-btn:hover,
.feature-btn:active,
.feature-btn:focus,
.feature-btn:active:focus {
    background-color: #4e7fff;
    color: white;
}

.btn-sign-up {
    border-radius: 25px;
    width: 200px;
    background-color: #2f2d2d;
    color: white;
}

.btn-sign-up:hover {
    background-color: #4e7fff;
    color: white;
}

.btn-sign-up-btn:hover,
.btn-sign-up-btn:active,
.btn-sign-up-btn:focus,
.btn-sign-up-btn:active:focus {
    color: white;
}



/* ----------------------------------------- Footer */
footer {
    background-color: #343a40;
    color: white;
    min-height: 100px;
    text-align: center;
    margin-top: 80px;
}

.social-links {
    padding-top: 15px;
    text-align: center;
}

.social-links li a i {
    font-size: 32px;
    padding: 12px;
    color: white;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    color: black;
}

